# ros2_distributed_control_system

./: README.md
custom_interfaces/: CMakeLists.txt
custom_interfaces/msg/: PoseCommunication.msg  PoseSensing.msg  VelDir.msg
custom_interfaces/srv/: ResetPoses.srv  RobPose2.srv
distributed_control_experiments/: Dockerfile  readme.md
distributed_control_experiments/control_pkg/config/: real_pose_real_push.ini
distributed_control_experiments/docker/: Dockerfile
distributed_control_experiments/experiment_pkg/: run_aruco_test_1c.sh  run_aruco_test_1uc.sh  run_aruco_test_3c.sh  run_aruco_test_3uc.sh  setup.py
distributed_control_experiments/experiment_pkg/experiment_pkg/: a1_compressed_image_publisher.py  a1_image_publisher.py  a2_aruco_detection.py  a2_hand_detection.py  a3_accuracy_measurement.py  a3_pose_subscriber.py
experiments/: package.xml
experiments/examples/: run_push_edge.sh  run_push_rot_fresh.sh  run_push_translations_test.sh  run_push_translations_wifi5_loaded.sh  run_qos_a3.sh
experiments/src/: push_rot_main_fresh.cpp  push_translation_gazebo.cpp
gazebo_push_simulation/: Dockerfile  readme.md
gazebo_push_simulation/custom_interfaces/srv/: GetRobPose.srv
gazebo_push_simulation/experiments/: CMakeLists.txt
gazebo_push_simulation/experiments/examples/: bash_test.sh  run_push_translations.sh  run_qos_a1.sh  run_qos_a2.sh
gazebo_push_simulation/experiments/src/: push_rot_gazebo.cpp  push_translation_main.cpp
gazebo_push_simulation/latency_distributions/: README.md  ethernet.csv  private4g.csv  private5g.csv  private5g_urllc.csv  wifi5_ideal.csv  wifi5_loaded.csv
gazebo_push_simulation/main_pkg/: package.xml
gazebo_push_simulation/main_pkg/config/: controllers.yaml  real_controllers.yaml  real_pose_real_push.ini  real_pose_sim_push.ini  sim_translation.ini  test01.ini
gazebo_push_simulation/main_pkg/launch/: main.launch.py  main_real_ur3e.launch.py  multi_object_spawn_launch.py  onboard_aruco_push.launch.py  spawn_cube_launch.py  start_ur_world.launch.py
gazebo_push_simulation/main_pkg/meshes/: cube_tag2_indigo.dae  cube_tag3_blue.dae  cube_tag5_yellow.dae  cube_tag6_orange.dae  push_reaction_gazebo.cpp  push_reaction_main.cpp
gazebo_push_simulation/main_pkg/src/: cartesian_velocity_controller.cpp  cartesian_velocity_controller_2.cpp  cartesian_velocity_controller_ur3e.cpp  pose_sensing.cpp  real_cartesian_velocity_controller_ur3e.cpp  set_config_client.cpp  velocity_controller.cpp
gazebo_push_simulation/main_pkg/urdf/: ur.urdf.xacro  ur_gazebo.urdf.xacro
gazebo_push_simulation/main_pkg/urdf/cubes/: cube_tag0_grey.urdf  cube_tag1_violet.urdf  cube_tag3_blue.urdf  cube_tag5_yellow.urdf  cube_tag6_orange.urdf  cube_tag7_red.urdf  translation_base.urdf
gazebo_push_simulation/push_control_py/: package.xml  setup.cfg
gazebo_push_simulation/push_control_py/push_control_py/: a1_image_publisher.py  a3_pose_subscriber.py  aruco_detection_client.py  aruco_detection_srv.py  qos_test_publisher.py  qos_test_subscriber.py  rc_boxpick_onboard_client.py  rc_itempick_onboard_client.py  rc_tagdetect.py  sim_translation.py  timer_delay_test_sub.py  webcam_pub_raw.py
gazebo_push_simulation/robotiq_2f_model/: CMakeLists.txt  package.xml
main_pkg/: CMakeLists.txt
main_pkg/launch/: main.launch.py  main_ur3e.launch.py  spawn_cube.py
main_pkg/meshes/: cube_tag0_grey.dae  cube_tag1_violet.dae  cube_tag4_green.dae  cube_tag7_red.dae  translation_base.dae  translation_base_large.dae
main_pkg/rviz/: view_world.rviz
main_pkg/src/: cartesian_velocity_controller.cpp  cv_marker_generation.cpp  inv_jacobian.cpp  rc_sensing.cpp  world_setup.cpp
main_pkg/urdf/: ur.urdf.xacro
main_pkg/urdf/cubes/: cube_tag2_indigo.urdf  cube_tag4_green.urdf
main_pkg/urdf/gripper/: gripper.ros2_control.xacro  robotiq_2f_85.urdf.xacro
main_pkg/worlds/: empty_plugin.world
push_control_py/: setup.py
push_control_py/push_control_py/: a2_aruco_detection.py  a3_accuracy_measurement.py  qos_test_client.py  qos_test_service.py  rc_cadmatch_client.py  rc_tagdetect_onboard_client.py  real_pose_real_push_ur3e.py  real_pose_sim_push.py  sim_translation_ur3e.py  timer_delay_test.py  timer_delay_test_pub.py  timer_delay_test_sub_pub.py  webcam_srv.py
qos_communication_tests/: readme.md
qos_communication_tests/custom_interfaces/: CMakeLists.txt
qos_communication_tests/custom_interfaces/msg/: ImageStampId.msg  PosesStampId.msg
qos_communication_tests/custom_interfaces/srv/: PosesStampIdSrv.srv  QosSettings.srv
qos_communication_tests/docker/: Dockerfile
qos_communication_tests/qos_pkg/: package.xml  run_a1.sh  run_a1_test.sh  run_a2.sh  run_a2_test.sh  run_a3.sh  run_a3_test.sh  setup.py
qos_communication_tests/qos_pkg/launch/: a1_pub.launch.py
qos_communication_tests/qos_pkg/qos_pkg/: a1_compressed_image_pub.py  a2_compressed_image_sub_pub.py  a3_compressed_image_sub.py  image_a1_pub.py  image_a3_sub.py  poses_a1_pub.py  poses_a2_sub_pub.py  poses_a3_sub.py  poses_client.py  poses_srv.py  qos_profiles.py  rs_a2_sub_pub.py
